lint_errs.txt
clang-tidy src/*.c tests/*.c examples/*.c -- -std=c11 -Wall -Wextra -Wpedantic -Iinclude
/home/bilti/src/cerebrics/src/cerebrics.c:18:20: warning: The value '-1' provided to the cast expression is not in the valid range of values for the enum [clang-analyzer-optin.core.EnumCastOutOfRange]
   18 |             return -1;
      |                    ^
include/cerebrics/errors.h:8:9: note: enum declared here
    8 | typedef enum {
      |         ^~~~~~
    9 |     CBR_OK = 0,
      |     ~~~~~~~~~~~
   10 |     CBR_ERR_INVALID_ARGUMENT = 1,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   11 |     CBR_ERR_OUT_OF_BOUNDS = 2,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   12 |     CBR_ERR_SHAPE = 3,
      |     ~~~~~~~~~~~~~~~~~~
   13 |     CBR_ERR_ALLOCATION = 4,
      |     ~~~~~~~~~~~~~~~~~~~~~~~
   14 |     CBR_ERR_UNSUPPORTED = 5
      |     ~~~~~~~~~~~~~~~~~~~~~~~
   15 | } CBR_Status;
      | ~
/home/bilti/src/cerebrics/src/cerebrics.c:54:9: note: Assuming 'data' is non-null
   54 |     if (!data) {
      |         ^~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:54:5: note: Taking false branch
   54 |     if (!data) {
      |     ^
/home/bilti/src/cerebrics/src/cerebrics.c:57:21: note: Calling 'cbr_tensor_create'
   57 |     CBR_Tensor *t = cbr_tensor_create(ndim, shape, requires_grad);
      |                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:33:9: note: Assuming 't' is non-null
   33 |     if (!t) {
      |         ^~
/home/bilti/src/cerebrics/src/cerebrics.c:33:5: note: Taking false branch
   33 |     if (!t) {
      |     ^
/home/bilti/src/cerebrics/src/cerebrics.c:37:9: note: Calling 'cbr_tensor_init_shape'
   37 |     if (cbr_tensor_init_shape(t, ndim, shape) != CBR_OK) {
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:6:10: note: 't' is non-null
    6 |     if (!t || !shape) {
      |          ^
/home/bilti/src/cerebrics/src/cerebrics.c:6:9: note: Left side of '||' is false
    6 |     if (!t || !shape) {
      |         ^
/home/bilti/src/cerebrics/src/cerebrics.c:6:15: note: Assuming 'shape' is non-null
    6 |     if (!t || !shape) {
      |               ^~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:6:5: note: Taking false branch
    6 |     if (!t || !shape) {
      |     ^
/home/bilti/src/cerebrics/src/cerebrics.c:9:9: note: Assuming 'ndim' is >= 1
    9 |     if (ndim < 1 || ndim > CBR_MAX_DIMS) {
      |         ^~~~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:9:9: note: Left side of '||' is false
/home/bilti/src/cerebrics/src/cerebrics.c:9:21: note: Assuming 'ndim' is <= CBR_MAX_DIMS
    9 |     if (ndim < 1 || ndim > CBR_MAX_DIMS) {
      |                     ^~~~~~~~~~~~~~~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:9:5: note: Taking false branch
    9 |     if (ndim < 1 || ndim > CBR_MAX_DIMS) {
      |     ^
/home/bilti/src/cerebrics/src/cerebrics.c:16:21: note: 'i' is < 'ndim'
   16 |     for (int i = 0; i < ndim; i++) {
      |                     ^
/home/bilti/src/cerebrics/src/cerebrics.c:16:5: note: Loop condition is true.  Entering loop body
   16 |     for (int i = 0; i < ndim; i++) {
      |     ^
/home/bilti/src/cerebrics/src/cerebrics.c:17:13: note: Assuming the condition is true
   17 |         if (shape[i] <= 0) {
      |             ^~~~~~~~~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:17:9: note: Taking true branch
   17 |         if (shape[i] <= 0) {
      |         ^
/home/bilti/src/cerebrics/src/cerebrics.c:18:20: note: The value '-1' provided to the cast expression is not in the valid range of values for the enum
   18 |             return -1;
      |                    ^~
/home/bilti/src/cerebrics/src/cerebrics.c:61:5: warning: Call to function 'memcpy' is insecure as it does not provide security checks introduced in the C11 standard. Replace with analogous functions that support length arguments or provides boundary checks such as 'memcpy_s' in case of C11 [clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling]
   61 |     memcpy(t->data, data, sizeof(float) * (size_t)t->size);
      |     ^~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:61:5: note: Call to function 'memcpy' is insecure as it does not provide security checks introduced in the C11 standard. Replace with analogous functions that support length arguments or provides boundary checks such as 'memcpy_s' in case of C11
   61 |     memcpy(t->data, data, sizeof(float) * (size_t)t->size);
      |     ^~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:79:9: warning: Call to function 'memset' is insecure as it does not provide security checks introduced in the C11 standard. Replace with analogous functions that support length arguments or provides boundary checks such as 'memset_s' in case of C11 [clang-analyzer-security.insecureAPI.DeprecatedOrUnsafeBufferHandling]
   79 |         memset(t->grad, 0, sizeof(float) * (size_t)t->size);
      |         ^~~~~~
/home/bilti/src/cerebrics/src/cerebrics.c:79:9: note: Call to function 'memset' is insecure as it does not provide security checks introduced in the C11 standard. Replace with analogous functions that support length arguments or provides boundary checks such as 'memset_s' in case of C11
   79 |         memset(t->grad, 0, sizeof(float) * (size_t)t->size);
      |         ^~~~~~
/home/bilti/src/cerebrics/tests/test_erros.c:8:37: warning: The value '999' provided to the cast expression is not in the valid range of values for the enum [clang-analyzer-optin.core.EnumCastOutOfRange]
    8 |     assert(strcmp(cbr_status_string((CBR_Status)999), "unkown error") == 0);
      |                                     ^
/usr/include/assert.h:109:7: note: expanded from macro 'assert'
  109 |     ((expr)                                                             \
      |       ^~~~
include/cerebrics/errors.h:8:9: note: enum declared here
    8 | typedef enum {
      |         ^~~~~~
    9 |     CBR_OK = 0,
      |     ~~~~~~~~~~~
   10 |     CBR_ERR_INVALID_ARGUMENT = 1,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   11 |     CBR_ERR_OUT_OF_BOUNDS = 2,
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
   12 |     CBR_ERR_SHAPE = 3,
      |     ~~~~~~~~~~~~~~~~~~
   13 |     CBR_ERR_ALLOCATION = 4,
      |     ~~~~~~~~~~~~~~~~~~~~~~~
   14 |     CBR_ERR_UNSUPPORTED = 5
      |     ~~~~~~~~~~~~~~~~~~~~~~~
   15 | } CBR_Status;
      | ~
/home/bilti/src/cerebrics/tests/test_erros.c:6:5: note: '?' condition is true
    6 |     assert(strcmp(cbr_status_string(CBR_OK), "ok") == 0);
      |     ^
/usr/include/assert.h:109:6: note: expanded from macro 'assert'
  109 |     ((expr)                                                             \
      |      ^
/home/bilti/src/cerebrics/tests/test_erros.c:7:5: note: '?' condition is true
    7 |     assert(strcmp(cbr_status_string(CBR_ERR_INVALID_ARGUMENT), "invalid argument") == 0);
      |     ^
/usr/include/assert.h:109:6: note: expanded from macro 'assert'
  109 |     ((expr)                                                             \
      |      ^
/home/bilti/src/cerebrics/tests/test_erros.c:8:37: note: The value '999' provided to the cast expression is not in the valid range of values for the enum
    8 |     assert(strcmp(cbr_status_string((CBR_Status)999), "unkown error") == 0);
      |                                     ^
/usr/include/assert.h:109:7: note: expanded from macro 'assert'
  109 |     ((expr)                                                             \
      |       ^~~~
/home/bilti/src/cerebrics/tests/test_utils.c:5:13: warning: unused function 'assert_close' [clang-diagnostic-unused-function]
    5 | static void assert_close(float got, float expected) {
      |             ^~~~~~~~~~~~
/home/bilti/src/cerebrics/tests/tests_tensor.c:36:25: error: call to undeclared function 'cbr_numel'; ISO C99 and later do not support implicit function declarations [clang-diagnostic-implicit-function-declaration]
   36 |     for (int i = 0; i < cbr_numel(x); i++) {
      |                         ^
/home/bilti/src/cerebrics/tests/tests_tensor.c:36:25: note: did you mean 'cbr_num_el'?
include/cerebrics/cerebrics.h:31:5: note: 'cbr_num_el' declared here
   31 | int cbr_num_el(CBR_Tensor *t);
      |     ^
include/cerebrics/cerebrics.h:29:12: warning: function 'cbr_tensor_set' has a definition with different parameter names [readability-inconsistent-declaration-parameter-name]
   29 | CBR_Status cbr_tensor_set(CBR_Tensor *t, const int *indicies, float value);
      |            ^
/home/bilti/src/cerebrics/src/cerebrics.c:130:12: note: the definition seen here
  130 | CBR_Status cbr_tensor_set(CBR_Tensor *t, const int *indices, float value) {
      |            ^
include/cerebrics/cerebrics.h:29:12: note: differing parameters are named here: ('indicies'), in definition: ('indices')
   29 | CBR_Status cbr_tensor_set(CBR_Tensor *t, const int *indicies, float value);
      |            ^                                        ~~~~~~~~
      |                                                     indices
